Fixed Components. Footer position is not correct. Not visible icons

--- a/src/main/webapp/src/app/components/etalon/companyInfo.css
+++ b/src/main/webapp/src/app/components/etalon/companyInfo.css
@@ -1,9 +1,4 @@
 .text-border-righ{
-    border:1px solid black;
+    border-right:1px solid black;
     padding:0px 3px 0px 3px;
-}
-
-.company-info-block{
-    position:absolute;
-    bottom:5px;
 }
